# ga_pcb

./: .gitignore  .vimspector.json  Cargo.toml  README.md
src/: individual.rs  main.rs  problem.rs
src/problem/: individual.rs  mod.rs  test.rs
