[package]
name = "ga_pcb"
version = "0.1.0"
authors = ["Jedrzej Rochala <rochala@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
colored = "2.0.0"
indicatif = "0.15.0"
num_cpus = "1.13.0"
